[metadata]
name = dblur
version = 1.0.0
author = Jishnu Parayil Shibu
author_email = jishnu82003@gmail.com
description = An extensive, highly customisable python package for image deblurring
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Jishnu8/DBlur-An-Image-Deblurring-Toolkit
project_urls =
    Bug Tracker = https://github.com/Jishnu8/DBlur-An-Image-Deblurring-Toolkit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    scipy
    numpy
    torch
    tensorboard
    torchmetrics
    piq
[options.packages.find]
where=src
